@@ -1,3 +1,5 @@
+* Check age of tracker position and warn about offline tracker on each location check (#38)
+
 rel 24.3.0
 * Fix comunication with traccar
 
